examples/fail/semantic/bad_main_return.bina
// EXPECT_SEMANTIC_ERROR: function 'main' must return int
fn main() -> void {
    return;
}
